--- a/style.css
+++ b/style.css
@@ -1,50 +1,44 @@
+/* --- UV Protection Color Guage styles --- */
 .favorable {
-    background-color: lightgreen;
-    width: 200px;
-    margin: 0 auto;
-    border-radius: .25rem;
+  background-color: lightgreen;
+  width: 200px;
+  margin: 0 auto;
+  border-radius: 0.25rem;
 }
 
 .moderate {
-    background-color: orange;
-    width: 200px;
-    margin: 0 auto;
-    border-radius: .25rem;
+  background-color: orange;
+  width: 200px;
+  margin: 0 auto;
+  border-radius: 0.25rem;
 }
 
 .severe {
-    background-color: red;
-    width: 200px;
-    margin: 0 auto;
-    border-radius: .25rem;
+  background-color: red;
+  width: 200px;
+  margin: 0 auto;
+  border-radius: 0.25rem;
 }
 
-/* .bg-dark {
-    background-color: rgb(82, 98, 119) !important;
-} */
-
 #no-border .card {
-    border: none;
-
+  border: none;
 }
 
 .card {
-    border: none;
+  border: none;
 }
 
 #disappear {
-    display: none;
+  display: none;
 }
 
 @media screen and (max-width: 767px) {
+  .display-3 {
+    text-align: center;
+    font-size: 55px;
+  }
 
-    .display-3 {
-        text-align: center;
-        font-size: 55px;
-    }
-
-    .text-left {
-        text-align: center !important;
-    }
-
+  .text-left {
+    text-align: center !important;
+  }
 }
